--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
     <link rel="stylesheet" href="./styles/header/header.css">
     <link rel="stylesheet" href="./styles/carousel/carousel.css">
     <!-- Media query -->
-    <link rel="stylesheet"
-        media="screen and (max-width: 300px), screen and (max-width: 900px), screen and (max-width: 991px),screen and (min-width: 992px), screen and (max-width: 1200px)"
-        href="./styles/header/header-responsive.css">
+    <link rel="stylesheet" media="screen and (max-width: 300px)" href="./styles/header/small-header.css">
+    <link rel="stylesheet" media="screen and (max-width: 992px),screen and (min-width: 992px)"
+        href="./styles/header/medium-header.css">
+    <link rel="stylesheet" media="screen and (max-width: 1200px)" href="./styles/header/large-header.css">
     <link rel="stylesheet" media="screen and (max-width: 1200px)" href="./styles/carousel/carousel-tablet.css">
     <link rel="stylesheet" media="screen and (max-width: 991px)" href="./styles/carousel/carousel-mobile.css">
 
@@ -40,7 +41,7 @@
         <!----------- logo section---------------->
 
         <div class="brand-logo">
-            <a class="navbar-brand ms-5" href="#">
+            <a class="navbar-brand " href="#">
                 <img src="./images/Logo.png" alt="lorem logo" class="logo">
             </a>
         </div>
@@ -54,6 +55,9 @@
                     <span class="open-icon">☰</span>
                     <span class="close-icon" style="display: none;"></span>
                 </button>
+
+               
+                
             </div>
             <div class="collapse navbar-collapse me-5" id="navbarNav">
                 <ul class="navbar-nav">
@@ -101,6 +105,7 @@
                 </button>
             </div>
         </div>
+
     </header>
 
     <!-- ----------------------------------------------carousel-------------------------------->
@@ -117,7 +122,7 @@
                             suscipit lobortis nisl ut aliquip ex ea comm...</p>
 
                         <div class="button-container">
-                            <a href="#" class="learn-more-button buttonB">
+                            <a href="#" class="primary-button buttonB">
                                 LEARN MORE <img src="./images/learnmore_banner.png" alt="Arrow"
                                     class="arrow banner-arrow">
                             </a>
@@ -134,7 +139,7 @@
                             suscipit lobortis nisl ut aliquip ex ea comm...</p>
 
                         <div class="button-container">
-                            <a href="#" class="learn-more-button buttonB">
+                            <a href="#" class="primary-button buttonB">
                                 LEARN MORE <img src="./images/learnmore_banner.png" alt="Arrow"
                                     class="arrow banner-arrow">
                             </a>
@@ -151,7 +156,7 @@
                             suscipit lobortis nisl ut aliquip ex ea comm...</p>
 
                         <div class="button-container">
-                            <a href="#" class="learn-more-button buttonB">
+                            <a href="#" class="primary-button buttonB">
                                 LEARN MORE <img src="./images/learnmore_banner.png" alt="Arrow"
                                     class="arrow banner-arrow">
                             </a>
@@ -170,7 +175,7 @@
                             suscipit lobortis nisl ut aliquip ex ea comm...</p>
 
                         <div class="button-container">
-                            <a href="#" class="learn-more-button buttonB">
+                            <a href="#" class="primary-button buttonB">
                                 LEARN MORE <img src="./images/learnmore_banner.png" alt="Arrow"
                                     class="arrow banner-arrow">
                             </a>
