--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
     <link rel="stylesheet" href="./styles/header/header.css">
     <link rel="stylesheet" href="./styles/carousel/carousel.css">
     <!-- Media query -->
-    <link rel="stylesheet" media="screen and (max-width: 300px)" href="./styles/header/small-header.css">
+    <link rel="stylesheet" media="screen and (max-width: 300px)" href="./styles/header/xs-header.css">
     <link rel="stylesheet" media="screen and (max-width: 992px),screen and (min-width: 992px)"
         href="./styles/header/medium-header.css">
+        <link rel="stylesheet" media="screen and (max-width: 550px)" href="./styles/header/small-header.css">
     <link rel="stylesheet" media="screen and (max-width: 1200px)" href="./styles/header/large-header.css">
     <link rel="stylesheet" media="screen and (max-width: 1200px)" href="./styles/carousel/carousel-tablet.css">
     <link rel="stylesheet" media="screen and (max-width: 991px)" href="./styles/carousel/carousel-mobile.css">
@@ -52,12 +53,8 @@
             <div class="container-fluid menuIcon">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" id="toggleButton">
-                    <span class="open-icon">☰</span>
-                    <span class="close-icon" style="display: none;"></span>
+                    ☰
                 </button>
-
-               
-                
             </div>
             <div class="collapse navbar-collapse me-5" id="navbarNav">
                 <ul class="navbar-nav">
@@ -123,8 +120,8 @@
 
                         <div class="button-container">
                             <a href="#" class="primary-button buttonB">
-                                LEARN MORE <img src="./images/learnmore_banner.png" alt="Arrow"
-                                    class="arrow banner-arrow">
+                                LEARN MORE
+                                <div class="arr"></div>
                             </a>
                         </div>
                     </div>
@@ -140,8 +137,8 @@
 
                         <div class="button-container">
                             <a href="#" class="primary-button buttonB">
-                                LEARN MORE <img src="./images/learnmore_banner.png" alt="Arrow"
-                                    class="arrow banner-arrow">
+                                LEARN MORE
+                                <div class="arr"></div>
                             </a>
                         </div>
                     </div>
@@ -157,8 +154,9 @@
 
                         <div class="button-container">
                             <a href="#" class="primary-button buttonB">
-                                LEARN MORE <img src="./images/learnmore_banner.png" alt="Arrow"
-                                    class="arrow banner-arrow">
+                                LEARN MORE
+                                <div class="arr"></div>
+
                             </a>
                         </div>
                     </div>
@@ -176,8 +174,8 @@
 
                         <div class="button-container">
                             <a href="#" class="primary-button buttonB">
-                                LEARN MORE <img src="./images/learnmore_banner.png" alt="Arrow"
-                                    class="arrow banner-arrow">
+                                LEARN MORE
+                                <div class="arr"></div>
                             </a>
                         </div>
                     </div>
