--- a/index.html
+++ b/index.html
@@ -24,14 +24,17 @@
     <link rel="stylesheet" href="./styles/global-styles/buttons.css">
     <link rel="stylesheet" href="./styles/header/header.css">
     <link rel="stylesheet" href="./styles/carousel/carousel.css">
+    <link rel="stylesheet" href="./styles/menu/menu.css">
     <!-- Media query -->
     <link rel="stylesheet" media="screen and (max-width: 300px)" href="./styles/header/xs-header.css">
     <link rel="stylesheet" media="screen and (max-width: 992px),screen and (min-width: 992px)"
         href="./styles/header/medium-header.css">
-        <link rel="stylesheet" media="screen and (max-width: 550px)" href="./styles/header/small-header.css">
+    <link rel="stylesheet" media="screen and (max-width: 550px)" href="./styles/header/small-header.css">
     <link rel="stylesheet" media="screen and (max-width: 1200px)" href="./styles/header/large-header.css">
     <link rel="stylesheet" media="screen and (max-width: 1200px)" href="./styles/carousel/carousel-tablet.css">
     <link rel="stylesheet" media="screen and (max-width: 991px)" href="./styles/carousel/carousel-mobile.css">
+    <link rel="stylesheet" media="screen and (max-width: 770px)" href="./styles/menu/menu-tablet.css">
+
 
 
 </head>
@@ -182,10 +185,40 @@
                 </div>
             </div>
         </div>
-
     </section>
 
+    <!-- -----------------------------------------menu--------------------------------------- -->
 
+    <section>
+        <div class="banner-menu" id="menu">
+            <article class="container">
+                <div class="row">
+                    <div class="col-lg-6 col-md-6 ">
+                        <img src="./images/logo_watermark.png" alt="" class="watermark">
+                    </div>
+                    <div class="col-lg-5 col-md-5 menu-txt">
+                        <h2>MENU</h2>
+                        <p class="">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+                            euismod
+                            tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+                            quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo
+                            consequat. Duis autem vel eum</p>
+                        <div class="button-container2 mbutton">
+                            <a href="#" class="primary-button-2 primary-button buttonM">
+                                LEARN MORE
+                                <button>
+                                    <!-- <img src="./image/learnmore_banner.png" alt="Arrow" class=" bordered-image1"> -->
+                                    <div class="arr bordered-image1"></div>
+
+                                </button>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-1 col-md-1"></div>
+                </div>
+            </article>
+        </div>
+    </section>
 
 
 
