--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     <link rel="stylesheet" media="screen and (max-width: 1200px)" href="./styles/carousel/carousel-tablet.css">
     <link rel="stylesheet" media="screen and (max-width: 991px)" href="./styles/carousel/carousel-mobile.css">
     <link rel="stylesheet" media="screen and (max-width: 770px)" href="./styles/menu/menu-tablet.css">
+    <link rel="stylesheet" media="screen and (max-width: 450px)" href="./styles/menu/menu-mobile.css">
+
 
 
 
@@ -193,7 +195,7 @@
         <div class="banner-menu" id="menu">
             <article class="container">
                 <div class="row">
-                    <div class="col-lg-6 col-md-6 ">
+                    <div class="col-lg-6 col-md-6 menu-img">
                         <img src="./images/logo_watermark.png" alt="" class="watermark">
                     </div>
                     <div class="col-lg-5 col-md-5 menu-txt">
@@ -207,9 +209,7 @@
                             <a href="#" class="primary-button-2 primary-button buttonM">
                                 LEARN MORE
                                 <button>
-                                    <!-- <img src="./image/learnmore_banner.png" alt="Arrow" class=" bordered-image1"> -->
-                                    <div class="arr bordered-image1"></div>
-
+                                    <img src="./images/learnmore_banner.png" alt="Arrow" class=" bordered-image1">
                                 </button>
                             </a>
                         </div>
