--- a/index.html
+++ b/index.html
@@ -123,12 +123,11 @@
                             volutpat. Ut wisi enim ad minim veniam, quis nostrud <br>exerci tation ullamcorper
                             suscipit lobortis nisl ut aliquip ex ea comm...</p>
 
-                        <div class="button-container">
-                            <a href="#" class="primary-button buttonB">
-                                LEARN MORE
-                                <div class="arr"></div>
-                            </a>
-                        </div>
+                        <button class="button-container primary-button buttonB">
+                            LEARN MORE
+                            <div class="arr"></div>
+                        </button>
+
                     </div>
                     <img src="./images/banner_1920_550.jpg" alt="">
                 </div>
@@ -140,12 +139,10 @@
                             volutpat. Ut wisi enim ad minim veniam, quis nostrud <br>exerci tation ullamcorper
                             suscipit lobortis nisl ut aliquip ex ea comm...</p>
 
-                        <div class="button-container">
-                            <a href="#" class="primary-button buttonB">
+                            <button class="button-container primary-button buttonB">
                                 LEARN MORE
                                 <div class="arr"></div>
-                            </a>
-                        </div>
+                            </button>
                     </div>
                     <img src="./images/banner_1920_550.jpg" alt="">
                 </div>
@@ -157,13 +154,10 @@
                             volutpat. Ut wisi enim ad minim veniam, quis nostrud <br>exerci tation ullamcorper
                             suscipit lobortis nisl ut aliquip ex ea comm...</p>
 
-                        <div class="button-container">
-                            <a href="#" class="primary-button buttonB">
+                            <button class="button-container primary-button buttonB">
                                 LEARN MORE
                                 <div class="arr"></div>
-
-                            </a>
-                        </div>
+                            </button>
                     </div>
                     <img src="./images/banner_1920_550.jpg" alt="">
                 </div>
@@ -177,45 +171,50 @@
                             volutpat. Ut wisi enim ad minim veniam, quis nostrud <br>exerci tation ullamcorper
                             suscipit lobortis nisl ut aliquip ex ea comm...</p>
 
-                        <div class="button-container">
-                            <a href="#" class="primary-button buttonB">
+                            <button class="button-container primary-button buttonB">
                                 LEARN MORE
                                 <div class="arr"></div>
-                            </a>
-                        </div>
+                            </button>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- -----------------------------------------menu--------------------------------------- -->
+    <!-- -----------------------------------------block-0--------------------------------------- -->
 
     <section>
-        <div class="banner-menu" id="menu">
+        <div class="block-0" id="block">
             <article class="container">
                 <div class="row">
-                    <div class="col-lg-6 col-md-6 menu-img">
+                    <div class="col-lg-6 col-md-6 block-img">
                         <img src="./images/logo_watermark.png" alt="" class="watermark">
                     </div>
-                    <div class="col-lg-5 col-md-5 menu-txt">
+                    <div class="col-lg-5 col-md-5 block-txt">
                         <h2>MENU</h2>
-                        <p class="">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+                        <p class="">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh<undefined> <div class="arr"></div></undefined>
                             euismod
                             tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
                             quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo
                             consequat. Duis autem vel eum</p>
-                        <div class="button-container2 mbutton">
+                        <!-- <div class="button-container2 mbutton">
                             <a href="#" class="primary-button-2 primary-button buttonM">
                                 LEARN MORE
                                 <button>
                                     <img src="./images/learnmore_banner.png" alt="Arrow" class=" bordered-image1">
                                 </button>
+                                <div class="arr bordered-image1"></div>
                             </a>
+                        </div> -->
+                        <div class="button-container2 mbutton primary-button-2 primary-button buttonM">
+                            LEARN MORE
+                            <button>
+                                <div class="arr"></div>
+                            </button>
                         </div>
                     </div>
                     <div class="col-lg-1 col-md-1"></div>
-                </div>
+                </div><undefined><div class="arr"></div></undefined>
             </article>
         </div>
     </section>
