--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
     <link rel="stylesheet" href="./styles/carousel/carousel.css">
     <link rel="stylesheet" href="./styles/block/block.css">
     <link rel="stylesheet" href="./styles/block-1/block-1.css">
-    <!-- Media query -->
+    <link rel="stylesheet" href="./styles/block-2/block-2.css">
+    <link rel="stylesheet" href="./styles/block-3,4/block-3,4.css">
+    <link rel="stylesheet" href="./styles/footer/footer.css">
+    <!-- Media queries -->
     <link rel="stylesheet" media="screen and (max-width: 300px)" href="./styles/header/xs-header.css">
     <link rel="stylesheet" media="screen and (max-width: 992px),screen and (min-width: 992px)"
         href="./styles/header/medium-header.css">
@@ -40,15 +43,18 @@
     <link rel="stylesheet" media="screen and (max-width: 770px)" href="./styles/block-1/block-1-medium.css">
     <link rel="stylesheet" media="screen and (max-width: 1003px)" href="./styles/block-1/block-1-large.css">
     <link rel="stylesheet" media="screen and (max-width: 1400px)" href="./styles/block-1/block-1-xl.css">
-
-
-
+    <link rel="stylesheet" media="screen and (max-width: 600px)" href="./styles/block-2/block-2-small.css">
+    <link rel="stylesheet" media="screen and (max-width: 801px),screen and (min-width: 767px)"
+        href="./styles/block-2/block-2-medium.css">
+    <link rel="stylesheet" media="screen and (max-width: 990px)" href="./styles/block-2/block-2-large.css">
+    <link rel="stylesheet" media="screen and (max-width: 1400px)" href="./styles/block-2/block-2-XL.css">
+    <link rel="stylesheet" media="screen and (max-width: 665px)" href="./styles/block-3,4/block-3,4-small.css">
+    <link rel="stylesheet" media="screen and (max-width: 990px)" href="./styles/block-3,4/block-3,4-medium.css">
+    <link rel="stylesheet" media="screen and (max-width: 1260px)" href="./styles/block-3,4/block-3,4-large.css">
 </head>
 
 <body>
-
     <main>
-
         <header>
             <!----------- logo section---------------->
 
@@ -71,19 +77,19 @@
                 <div class="collapse navbar-collapse me-5" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" href="#menu">MENU</a>
+                            <a class="nav-link active" href="#block">MENU</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#menu1">MENU 1</a>
+                            <a class="nav-link active" href="#block1">MENU 1</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#menu2">MENU 2</a>
+                            <a class="nav-link active" href="#block-2">MENU 2</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#menu-3-4">MENU 3</a>
+                            <a class="nav-link active" href="#block-3-4">MENU 3</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#menu-3-4">MENU 4</a>
+                            <a class="nav-link active" href="#block-3-4">MENU 4</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="#footer">MENU 5</a>
@@ -294,6 +300,193 @@
 
         <!-- ----------------------------------------- block 2 --------------------------------------- -->
 
+        <section id="block-2">
+            <h2 class="text-center">MENU 2</h2>
+            <div class="container">
+                <div class="row ">
+                    <!-- First Column -->
+                    <div class="col-lg-6 col-md-12 block-2-img">
+                        <div class="menu-img image-container">
+                            <img src="./images/546_354.jpg" alt="" style="width:546p ;">
+                            <div class="image-text">
+                                <p class="block-2-head">LOREM IPSUM | MAR 2020</p>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
+                                    diam
+                                    nonummy nibh...
+                                </p>
+                            </div>
+                        </div>
+                        <div class="button-container4 secondary-button primary-button btn-4" id="">
+                            LEARN MORE
+                            <button class="image-button">
+                            </button>
+                        </div>
+                    </div>
+                    <!-- Second Column -->
+                    <div class="col-lg-6 col-md-12 block-2-second" style="width:auto ;">
+                        <div class="row">
+                            <div class="card-div">
+                                <div class="child-1">
+                                    <img src="./images/232_150_1.jpg" class="card-img" alt="...">
+                                    <div class="container">
+                                        <p class="card1">LOREM IPSUM | MAR 2020</p>
+                                        <p class="card2">Lorem ipsum dolor sit amet, consecte tuer adipiscing elit,
+                                            sed
+                                            diam
+                                            nonum...</p>
+                                    </div>
+                                </div>
+                                <div class="button-container4 secondary-button primary-button block-2-button">
+                                    LEARN MORE
+                                    <button class="image-button">
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="card-div">
+                                <div class="child-2">
+                                    <img src="./images/232_150_2.jpg" class="card-img" alt="...">
+                                    <div class="container">
+                                        <p class="card1">LOREM IPSUM | MAY 2020</p>
+                                        <p class="card2">Tamcorper suscipit lobortis nisl ut aliquipexea comm odo
+                                            consequat...</p>                                     
+                                    </div>
+                                </div>
+                                <div class="button-container4 secondary-button primary-button block-2-button"
+                                id="">
+                                LEARN MORE
+                                <button class="image-button">
+                                </button>
+                            </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="button-container3 text-center block-2-btn">
+                <button class="button-container primary-button buttonB view-btn">
+                    VIEW ALL
+                    <div class="arr arr-1"></div>
+                </button>
+            </div>
+        </section>
+
+        <!-- ----------------------------------------- block 3 & 4 --------------------------------------- -->
+
+        <section id="block-3-4">
+            <div class="row">
+                <div class="col-lg-6 col-md-12 ">
+                    <div class="row" id="row-1">
+                        <div class="nested-column-container-1">
+                            <div class="nested-column " id="nested-1">
+                                <div class="calander-items">
+                                    <h2 class="">MENU 3</h2>
+                                </div>
+                            </div>
+                            <div class="nested-column border-btm" id="nested-1">
+                                <div class="calander-items">
+                                    <div class="calander calanderEdited">
+                                        <div class="calander-month">
+                                            MAR
+                                        </div>
+                                        18
+                                    </div>
+                                    <p>Lorem ipsum dolor sit amet, consecte tur adipiscing elit, sed do eiusmod.
+                                        <br> <span class="block3Sub">13 -16 AUG 2020 | CAPE TOWN</span>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="nested-column border-btm" id="nested-1">
+                                <div class="calander-items">
+                                    <div class="calander">
+                                        <div class="calander-month">
+                                            MAR
+                                        </div>
+                                        22
+                                    </div>
+                                    <p>Tristique senectus et netus et. cursus sit amet dictum sit amet justo donec
+                                        enimturpis...
+                                        <br> <span class="block3Sub">27 AUG 2020 | FRANKFURT</span>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="nested-column border-btm" id="nested-1">
+                                <div class="calander-items">
+                                    <div class="calander calanderEdited">
+                                        <div class="calander-month">
+                                            APR
+                                        </div>
+                                        14
+                                    </div>
+                                    <p>A erat nam at lectus urna duis convallis convallis tellus.
+                                        <br> <span class="block3Sub">06 -14 SEP 2020 | MELBOURNE</span>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="button-container3 text-center ">
+                                <button class="button-container primary-button  view-btn-2">
+                                    VIEW ALL
+                                    <div class="arr"></div>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12">
+                    <div class="row" id="row-2">
+                        <div class="nested-column-container-2">
+                            <div class="nested-column menu-3-4-head" id="nested-2">
+                                <div class="calander-items">
+                                    <h2 class="menu-3-4-head Menu4">MENU 4</h2>
+                                </div>
+                            </div>
+                            <div class="nested-column border-btm2" id="nested-2">
+                                <div class="calander-items">
+                                    <div class="nested-img">
+                                        <img src="./images/172_112_1.jpg" alt="">
+                                    </div>
+                                    <p id="menu4P">Quis imperdiet massa tincidunt nunc amet nisl purus in mollis nunc
+                                        sed id
+                                        semper
+                                        risus...
+                                        <br> <span class="block3Sub">26 AUGUST 2020</span>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="nested-column border-btm2" id="nested-2">
+                                <div class="calander-items">
+                                    <div class="nested-img">
+                                        <img src="./images/172_112_2.jpg" alt="">
+                                    </div>
+                                    <p id="menu4P">Dignissim enim sit amet venenatis urna.
+                                        <br> <span class="block3Sub">12 AUGUST 2020</span>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="nested-column border-btm2" id="nested-2">
+                                <div class="calander-items">
+                                    <div class="nested-img">
+                                        <img src="./images/172_112_3.jpg" alt="">
+                                    </div>
+                                    <p id="menu4P">Amet nisl purus in mollis nunc sed id semper risus. Dignissim enim
+                                        sit
+                                        amet ven...
+                                        urna.
+                                        <br> <span class="block3Sub">21 JULY 2020</span>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="button-container3 text-center ">
+                                <button class="button-container primary-button  view-btn-2">
+                                    VIEW ALL
+                                    <div class="arr"></div>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
 
